added "welcome to" to the login page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 
-    <h2>JobsDoor login</h2>
+    <h2>Welcome to JobsDoor login</h2>
     
     <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
     
